Add new pandoc.css for more examples

--- a/Markdown_Resume.html
+++ b/Markdown_Resume.html
@@ -13,7 +13,7 @@
 
 <h1>César A. Lizárraga</h1>
 
-<p>e-mail: <a href="&#109;&#x61;&#105;l&#116;&#111;:&#x63;&#x61;&#108;&#105;&#x7A;&#x61;&#x72;&#114;&#64;&#x67;&#109;&#x61;&#105;&#108;&#x2E;&#x63;&#x6F;&#109;">&#x63;&#x61;&#108;&#105;&#x7A;&#x61;&#x72;&#114;&#64;&#x67;&#109;&#x61;&#105;&#108;&#x2E;&#x63;&#x6F;&#109;</a> <br />
+<p>e-mail: <a href="&#109;&#x61;&#x69;l&#x74;&#111;:&#x63;&#x61;&#108;&#105;&#x7A;&#97;&#x72;&#114;&#64;&#103;&#109;&#97;&#105;&#x6C;&#x2E;&#99;&#x6F;&#x6D;">&#x63;&#x61;&#108;&#105;&#x7A;&#97;&#x72;&#114;&#64;&#103;&#109;&#97;&#105;&#x6C;&#x2E;&#99;&#x6F;&#x6D;</a> <br />
 github: <a href="http://github.com/calizarr">http://github.com/calizarr</a> <br />
 LinkedIn: <a href="http://www.linkedin.com/in/calizarr">http://linkedin.com/in/calizarr</a></p>
 
@@ -28,8 +28,8 @@ LinkedIn: <a href="http://www.linkedin.com/in/calizarr">http://linkedin.com/in/c
 <li>Participated in planning multiple stages of the project at short and medium time phases</li>
 <li>Regularly interfaced with the client team to ensure needs and desires were met</li>
 <li>Using a high level concept, designed and architected an industry leading set of tools that allowed the <br />
-client to reduce their research time from weeks and months to days</li>
-<li>Helped prototype, develop, and deploy several services, APIs, and API clients in kubernetes</li>
+client to reduce their research time from weeks and months to days
+n* Helped prototype, develop, and deploy several services, APIs, and API clients in kubernetes</li>
 </ul></li>
 <li><p><strong><a href="http://www.nanaya.co">Nanaya</a> (St. Louis, MO): July 2014 - Present</strong> <br />
 <em>Co-founder/ Infrastructure &amp; Sofware Engineer / Statistician</em></p>
@@ -43,18 +43,16 @@ client to reduce their research time from weeks and months to days</li>
 <li><p><strong><a href="https://www.danforthcenter.org/">Donald Danforth Plant Science Center</a> (St. Louis, MO)</strong></p>
 
 <ul>
-<li><p><strong>October 2016 - July 2017</strong> <br />
-<em>Senior Computational Scientist</em></p>
-
+<li><strong>October 2016 - July 2017</strong> <br />
+<em>Senior Computational Scientist</em>
 <ul>
 <li>Provided computational interface for research groups</li>
 <li>Trained several lab technicians in computational infrastructure use</li>
 <li>Developed prototype of Arduino &amp; Raspberry Pi controlled field canopy sensor system: <a href="https://www.agrelaeco.com/">PheNode</a></li>
-<li><a href="#phenopisight">PhenoPiSight: A Fixed Camera Greenhouse-based Phenotyping platform</a>  </li>
+<li><a href="#phenopisight">PhenoPiSight: A Fixed Camera Greenhouse-based Phenotyping platform</a></li>
 </ul></li>
-<li><p><strong>December 2014 - October 2016</strong> <br />
-<em>Laboratory Technician (Bioinformatics/Statistics) in Mockler Lab</em></p>
-
+<li><strong>December 2014 - October 2016</strong> <br />
+<em>Laboratory Technician (Bioinformatics/Statistics) in Mockler Lab</em> <br />
 <ul>
 <li>Developed, documented, maintained, and tested pipelines for analyzing high throughput sequencing and imaging data</li>
 <li>Analytics, Data Management, and Development for the <a href="http://genomicscience.energy.gov/research/DOEUSDA/abstracts/2014mockler_abstract.shtml">Brachypodium ENCODE Project</a> and the <a href="https://missouriepscor.org/">EPSCoR Project</a></li>
