Update resume.md to fix typo

--- a/Markdown_Resume.html
+++ b/Markdown_Resume.html
@@ -13,7 +13,7 @@
 
 <h1>César A. Lizárraga</h1>
 
-<p>e-mail: <a href="&#109;&#x61;&#x69;l&#x74;&#111;:&#x63;&#x61;&#108;&#105;&#x7A;&#97;&#x72;&#114;&#64;&#103;&#109;&#97;&#105;&#x6C;&#x2E;&#99;&#x6F;&#x6D;">&#x63;&#x61;&#108;&#105;&#x7A;&#97;&#x72;&#114;&#64;&#103;&#109;&#97;&#105;&#x6C;&#x2E;&#99;&#x6F;&#x6D;</a> <br />
+<p>e-mail: <a href="&#x6D;&#97;&#105;&#108;&#116;&#x6F;:&#x63;&#97;&#x6C;&#x69;&#122;&#97;&#x72;&#114;&#64;&#103;&#x6D;&#x61;&#x69;&#108;&#46;c&#111;&#109;">&#x63;&#97;&#x6C;&#x69;&#122;&#97;&#x72;&#114;&#64;&#103;&#x6D;&#x61;&#x69;&#108;&#46;c&#111;&#109;</a> <br />
 github: <a href="http://github.com/calizarr">http://github.com/calizarr</a> <br />
 LinkedIn: <a href="http://www.linkedin.com/in/calizarr">http://linkedin.com/in/calizarr</a></p>
 
@@ -27,9 +27,8 @@ LinkedIn: <a href="http://www.linkedin.com/in/calizarr">http://linkedin.com/in/c
 <li>Lead a small team (4-5 engineers) in custom appliation development for a strategic partnership client</li>
 <li>Participated in planning multiple stages of the project at short and medium time phases</li>
 <li>Regularly interfaced with the client team to ensure needs and desires were met</li>
-<li>Using a high level concept, designed and architected an industry leading set of tools that allowed the <br />
-client to reduce their research time from weeks and months to days
-n* Helped prototype, develop, and deploy several services, APIs, and API clients in kubernetes</li>
+<li>Using a high level concept, designed and architected an industry leading set of tools that allowed the client to reduce their research time from weeks and months to days</li>
+<li>Helped prototype, develop, and deploy several services, APIs, and API clients in kubernetes</li>
 </ul></li>
 <li><p><strong><a href="http://www.nanaya.co">Nanaya</a> (St. Louis, MO): July 2014 - Present</strong> <br />
 <em>Co-founder/ Infrastructure &amp; Sofware Engineer / Statistician</em></p>
