Update CV/Resume to be clearer on responsibilities, etc.

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 <body>
 <h1 id="césar-a.-lizárraga">César A. Lizárraga</h1>
 <p>email: <a href="mailto:calizarr@gmail.com"
-class="email">calizarr@gmail.com</a><br />
-github: <a
-href="http://github.com/calizarr">http://github.com/calizarr</a><br />
+class="email">calizarr@gmail.com</a> github: <a
+href="http://github.com/calizarr">http://github.com/calizarr</a>
 LinkedIn: <a
 href="http://www.linkedin.com/in/calizarr">http://linkedin.com/in/calizarr</a></p>
 <h2 id="relevant-experience">Relevant Experience</h2>
@@ -109,12 +108,10 @@ Plant Science Center</a> (St. Louis, MO)</strong></p>
 in computational infrastructure use</li>
 <li>PheNode: Developed prototype of Arduino &amp; Raspberry Pi
 controlled field canopy sensor system which became <a
-href="https://www.agrelaeco.com/">AgrelaEco</a>
-<ul>
+href="https://www.agrelaeco.com/">AgrelaEco</a></li>
 <li><a
 href="https://github.com/calizarr/EPSCoR_Bramble_GH9C">PhenoPiSight: A
 Fixed Camera Greenhouse-based Phenotyping platform</a></li>
-</ul></li>
 </ul>
 <p><strong><em>LabTech (Bioinformatics/Statistics) Mockler
 Lab</em></strong> → <strong>December 2014 - October 2016</strong></p>
@@ -148,7 +145,7 @@ and <a
 href="https://nlnetlabs.nl/projects/unbound/about/">Unbound</a></li>
 <li>Hosting a variety of projects such as
 <ul>
-<li><a href="https://reconya.com/">Reconya</a>,<a
+<li><a href="https://reconya.com/">Reconya</a>, <a
 href="https://github.com/C4illin/ConvertX">ConvertX</a>, <a
 href="https://gethomepage.dev/">Homepage Dashboard</a>, <a
 href="https://www.plex.tv/">Plex</a>, and more</li>
@@ -172,9 +169,9 @@ of the 3D reconstruction:
 https://traitcapture.org/pointclouds/by-id/586a428ef7f5667846b1f8a0</a></li>
 </ul>
 <h2 id="education">Education</h2>
-<p><strong>B.A. Mathematics, 2008</strong><br />
-<em>Probability and Statistics</em><br />
-Department of Mathematics, Washington University in St. Louis</p>
+<p><strong>B.A. Mathematics, 2008</strong> <em>Probability and
+Statistics</em> Department of Mathematics, Washington University in
+St. Louis</p>
 <h2 id="engineering-skills">Engineering Skills</h2>
 <ul>
 <li>In order of familiarity:
@@ -246,17 +243,18 @@ http://dx.doi.org/10.1638/2015-0027.1 (2015)</em></p></li>
 <ul>
 <li><p>Skyler Mitchell, Stuart Marshall, Stephanie Turnipseed, Luke
 Burnham, <strong>César Lizárraga</strong>, Jared Streich, Rob Alba, and
-Todd C. Mockler (2015) “Effect of drought treatments on transpiration
-rate and stomatal density in <em>Brachypodium distachyon</em>.” Donald
-Danforth Plant Science Center and Missouri Botanical Gardens Joint Fall
-Symposium, St. Louis, MO, October 2015</p></li>
+Todd C. Mockler (2015) <strong>“Effect of drought treatments on
+transpiration rate and stomatal density in <em>Brachypodium
+distachyon</em>.”</strong> Donald Danforth Plant Science Center and
+Missouri Botanical Gardens Joint Fall Symposium, St. Louis, MO, October
+2015</p></li>
 <li><p><strong>César A. Lizárraga</strong>, Henry D. Priest, Noah
-Fahlgren, Rob Alba, and Todd C. Mockler. Bioinformatics Pipelines for
-Purple False Brome (Brachypodium distachyon) Donald Danforth Plant
-Science Center, St. Louis, MO. (2015)</p></li>
+Fahlgren, Rob Alba, and Todd C. Mockler. <strong>Bioinformatics
+Pipelines for Purple False Brome (Brachypodium distachyon) Donald
+Danforth Plant Science Center</strong>, St. Louis, MO. (2015)</p></li>
 <li><p><strong>Cesar Lizarraga</strong>, Stuart Marshall, Bradley Flynn,
-Nadia Shakoor and Todd C. Mockler. PhenoPiSight: Fixed Camera
-Greenhouse-based Phenotyping Platform. (2016)</p></li>
+Nadia Shakoor and Todd C. Mockler. <strong>PhenoPiSight: Fixed Camera
+Greenhouse-based Phenotyping Platform</strong>. (2016)</p></li>
 </ul>
 </body>
 </html>
